[project]
name = "udp-blaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.11.16",
  "aiosignal==1.3.2",
  "attrs==25.3.0",
  "beautifulsoup4==4.13.4",
  "bs4==0.0.2",
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "fonttools==4.57.0",
  "frozenlist==1.6.0",
  "gevent==25.4.1",
  "glad2==2.0.8",
  "glcontext==3.0.0",
  "greenlet==3.2.0",
  "idna==3.10",
  "Jinja2==3.1.6",
  "kiwisolver==1.4.8",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.3",
  "multidict==6.4.3",
  "numpy==2.2.5",
  "opencv-python==4.13.0.90",
  "packaging==25.0",
  "pathlib==1.0.1",
  "Pillow==10.0.0",
  "propcache==0.3.1",
  "pupil_apriltags==1.0.4.post11",
  "pyglet==2.1.6",
  "pyglm==2.8.2",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.0",
  "requests==2.31.0",
  "robotpy-apriltag>=2026.2.1",
  "six==1.17.0",
  "soupsieve==2.6",
  "tk==0.1.0",
  "typing_extensions==4.13.2",
  "urllib3==2.4.0",
  "websocket==0.2.1",
  "websockets==15.0.1",
  "yarl==1.20.0",
  "zope.event==5.0",
  "zope.interface==7.2",
]
